# isa-l

./: .gitignore  CMakeLists.txt
cmake/: igzip.cmake
crc/: crc32_gzip_refl_by16_10.asm  crc_base_aliases.c
crc/aarch64/: crc_aarch64_dispatcher.c
igzip/: igzip.c  igzip_inflate.c
include/: igzip_lib.h
